feat: jib